View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027773 | Open CASCADE | OCCT:Modeling Algorithms | public | 2016-08-15 11:18 | 2016-12-09 16:38 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027773: Empty result of section operation between line and offset of a circle | ||||
Description | The result of section operation between linear edge and edge based on offset curve with circle base is empty. | ||||
Steps To Reproduce | circle c 1 0 0 20 offset c1 c 10 0 0 1 mkedge e1 c1 vertex v1 0 35 0 vertex v2 0 -35 0 edge e2 v1 v2 bsection result e1 e2 checknbshapes result -vertex 2 | ||||
Tags | No tags attached. | ||||
Test case number | bugs modalg_6 bug27773 | ||||
|
Branch CR27773 has been created by emv. SHA-1: 1b6feeb905473ed401d3f1c15659d01252ad8be1 Detailed log of new commits: Author: emv Date: Mon Aug 15 15:08:33 2016 +0300 0027773: Empty result of section operation between line and offset of a circle In Edge/Edge intersection the Resolution for the Offset Curve based on the elementary curve (Line/Circle/Ellipse) is computed using this basis curve. |
|
Git branch CR27773 is ready for review. |
|
Reviewed. |
|
Dear BugMaster, Branch CR27773 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms and tested. SHA-1: 1b6feeb905473ed401d3f1c15659d01252ad8be1 Number of compiler warnings: occt component: Linux: 0 (0 on master) Windows: 0 (0 on master) MasOS: 0 (0 on master) products component: Linux: 64 Windows: 0 MacOS: 1151 Regressions/Differences: Not detected Testing cases: bugs modalg_6 bug27773 - OK http://occt-tests/CR27773-master-OCCT/Debian70-64/bugs/modalg_6/bug27773.html http://occt-tests/CR27773-master-OCCT/Windows-64-VC10/bugs/modalg_6/bug27773.html Testing on Linux: Total MEMORY difference: 90141650 / 90467159 [-0.36%] Total CPU difference: 19482.689999999973 / 19471.050000000094 [+0.06%] Testing on Windows: Total MEMORY difference: 57143516 / 57162645 [-0.03%] Total CPU difference: 18006.11902309891 / 17970.971997798883 [+0.20%] |
|
Branch CR27773 has been deleted by inv. SHA-1: 1b6feeb905473ed401d3f1c15659d01252ad8be1 |
occt: master e91a710c 2016-08-15 12:08:33
Committer: bugmaster Details Diff |
0027773: Empty result of section operation between line and offset of a circle In Edge/Edge intersection the Resolution for the Offset Curve based on the elementary curve (Line/Circle/Ellipse) is computed using this basis curve. |
Affected Issues 0027773 |
|
mod - src/IntTools/IntTools_EdgeEdge.cxx | Diff File | ||
add - tests/bugs/modalg_6/bug27773 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-08-15 11:18 |
|
New Issue | |
2016-08-15 11:18 |
|
Assigned To | => msv |
2016-08-15 11:18 |
|
Assigned To | msv => emv |
2016-08-15 11:48 |
|
Status | new => assigned |
2016-08-15 13:41 | bugmaster | Relationship added | related to 0008040 |
2016-08-15 15:09 | git | Note Added: 0056719 | |
2016-08-15 15:29 |
|
Note Added: 0056722 | |
2016-08-15 15:29 |
|
Assigned To | emv => msv |
2016-08-15 15:29 |
|
Status | assigned => resolved |
2016-08-15 17:07 |
|
Note Added: 0056725 | |
2016-08-15 17:07 |
|
Assigned To | msv => bugmaster |
2016-08-15 17:07 |
|
Status | resolved => reviewed |
2016-08-15 18:10 |
|
Assigned To | bugmaster => apv |
2016-08-16 12:59 |
|
Note Added: 0056744 | |
2016-08-16 12:59 |
|
Assigned To | apv => bugmaster |
2016-08-16 12:59 |
|
Status | reviewed => tested |
2016-08-16 12:59 |
|
Test case number | => bugs modalg_6 bug27773 |
2016-08-19 10:07 | bugmaster | Changeset attached | => occt master e91a710c |
2016-08-19 10:07 | bugmaster | Status | tested => verified |
2016-08-19 10:07 | bugmaster | Resolution | open => fixed |
2016-08-26 16:22 | git | Note Added: 0057140 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |